# kachaka_autoware_bridge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  pre-commit.yml
docs/superpowers/plans/: 2026-06-04-m1-localization-bridge.md
docs/superpowers/specs/: 2026-05-02-kachaka-autoware-core-design.md  2026-06-04-kachaka-autoware-stock-localization.md
kachaka_autoware_bridge/: CMakeLists.txt  README.md  package.xml
kachaka_autoware_bridge/config/: endurance.param.yaml  motion_velocity_planner_modules.param.yaml  pose_initializer.param.yaml
kachaka_autoware_bridge/kachaka_autoware_bridge/: __init__.py  centerline.py  endurance.py  locmon.py  loop_route.py  ring_driver.py  se3.py  tf_gate.py  trajectory_gen.py
kachaka_autoware_bridge/launch/: _grpc_bridge_core.launch.xml  _localization_core.launch.xml  _planning_core.launch.xml  api.launch.xml  canned_trajectory.launch.xml  control.launch.xml  endurance.launch.xml  initialization_state.launch.xml  kachaka_autoware.launch.xml  kachaka_autoware_2d.launch.xml  kachaka_autoware_stock.launch.xml  localization.launch.xml  map.launch.xml  no_perception_stubs.launch.xml  planning.launch.xml  sensor_ouster.launch.xml  temp_velocity_relay.launch.xml
kachaka_autoware_bridge/rviz/: kachaka_autoware_2d.rviz
kachaka_autoware_bridge/scripts/: localization_monitor  map_to_odom_adapter  perception_stub  publish_canned_trajectory  publish_initialization_state  run_endurance  set_loop_route  tf_gate
kachaka_autoware_bridge/test/: test_centerline.py  test_endurance.py  test_locmon.py  test_loop_route.py  test_se3.py  test_tf_gate.py  test_trajectory_gen.py
kachaka_autoware_description/: CMakeLists.txt  package.xml
kachaka_autoware_description/config/: vehicle_info.param.yaml
kachaka_autoware_description/launch/: robot_description.launch.py
kachaka_autoware_description/urdf/: _ouster_os1.urdf.xacro  kachaka_with_shelf.urdf.xacro
kachaka_autoware_localization/: CMakeLists.txt  package.xml
kachaka_autoware_localization/config/: localization.param.yaml
kachaka_autoware_localization/include/kachaka_autoware_localization/: kinematic_state_converter.hpp  localization_bridge_node.hpp
kachaka_autoware_localization/launch/: localization.launch.xml
kachaka_autoware_localization/src/: kinematic_state_converter.cpp  localization_bridge_node.cpp  main.cpp
kachaka_autoware_localization/test/: test_kinematic_state_converter.cpp
kachaka_autoware_maps/: CMakeLists.txt  README.md  package.xml
kachaka_autoware_maps/kachaka_autoware_maps/: loop_map_gen.py  pcd_io.py  sidecars.py  stitcher.py
kachaka_autoware_maps/launch/: generate_loop_map.launch.xml  snapshot.launch.xml  stitch_map.launch.xml
kachaka_autoware_maps/scripts/: generate_loop_map  snapshot_map  stitch_map
kachaka_autoware_maps/test/: test_loop_map_gen.py  test_pcd_io.py  test_sidecars.py  test_stitcher.py
kachaka_autoware_vehicle_interface/: CMakeLists.txt  package.xml
kachaka_autoware_vehicle_interface/config/: vehicle_interface.param.yaml
kachaka_autoware_vehicle_interface/include/kachaka_autoware_vehicle_interface/: control_to_twist_converter.hpp  operation_mode_state_machine.hpp  vehicle_interface_node.hpp  velocity_status_publisher.hpp
kachaka_autoware_vehicle_interface/launch/: vehicle_interface.launch.xml
kachaka_autoware_vehicle_interface/src/: control_to_twist_converter.cpp  main.cpp  operation_mode_state_machine.cpp  vehicle_interface_node.cpp  velocity_status_publisher.cpp
kachaka_autoware_vehicle_interface/test/: test_control_to_twist_converter.cpp  test_operation_mode_state_machine.cpp  test_vehicle_interface_node.cpp  test_velocity_status_publisher.cpp
