<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kachaka_autoware_description</name>
  <version>0.0.0</version>
  <description>Composite URDF for Kachaka with the 3-tier shelf and a roof-mounted Ouster OS-1 128, plus Autoware vehicle_info parameters tuned for differential drive.</description>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>
  <license>Apache License 2.0</license>
  <author email="yutaka.kondo@youtalk.jp">Yutaka Kondo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>kachaka_description</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>kachaka_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
