<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kachaka_autoware_maps</name>
  <version>0.0.0</version>
  <description>Helpers for Kachaka Autoware map preparation: stationary 3D-LiDAR snapshot tool (PCD + minimum lanelet2 + sidecars) and a stock circular loop-map generator that builds a one-way lanelet2 map from Kachaka's 2D occupancy grid without any external LiDAR. Real maps live outside the repository.</description>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>
  <license>Apache License 2.0</license>
  <author email="yutaka.kondo@youtalk.jp">Yutaka Kondo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>kachaka_autoware_description</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>lanelet2_python</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
