<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kachaka_autoware_vehicle_interface</name>
  <version>0.0.0</version>
  <description>Pure-logic libraries used by the Kachaka Autoware vehicle interface: Ackermann-to-differential-drive twist conversion, operation-mode state machine, and odometry-to-VelocityReport conversion. The rclcpp Node that wires these into ROS I/O is added by a follow-up PR.</description>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>
  <license>Apache License 2.0</license>
  <author email="yutaka.kondo@youtalk.jp">Yutaka Kondo</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
